feat: index- adds skills images reprendation

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                  <div class="about-desc">
                                     <h2>About Me</h2>
                                     <hr>
-                                    <p>I am a professional software engineer with experience with end-to-end experience in software development, solution architecture, quality engineering, and project management.
+                                    <p>I am a professional software engineer with end-to-end experience in software development, solution architecture, quality engineering, and project management.
                                        I am passionate about using technologies to solve problems.
                                        Through self-taught learning, on-the-job experience, and boot camps, I have learned a wide array of technology stacks that make me an all-rounded software engineer.</p>
                                  </div>
@@ -112,102 +112,181 @@
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Skills</h2>
+                           <h2 class="test-center">Skills</h2>
                            <hr>
                         </div>
                      </div>
                      <p>These are among technologies, frameworks, languages and databases that I have previously worked with and enjoy working with them.</p>
                      <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">HTML, CSS and Boostrap</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                    <span>95%</span>
+
+                             <div class="col-md-12 mt-4 ">
+                                 <div class="skill-mf">
+                                     <div class="row animate-box" data-animate-effect="fadeInLeft">
+                                         <div class="col-md-1 mb-2animate-box" data-animate-effect="fadeInLeft"></div>
+                                         <div class="col-md-2 mb-2"><span><img src="images/javascript-logo.png" class="imgs" alt=""/></span>
+                                         </div>
+                                         <div class="col-md-2 mb-2 p-3 animate-box" data-animate-effect="fadeInLeft">
+                                             <img
+                                                     src="images/angular-seeklogo.com.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInLeft">
+                                             <img
+                                                     src="images/icons8-react-native.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                             <span class="">React</span>
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInLeft">
+                                             <img
+                                                     src="images/icons8-firebase-480.png"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                             <span class="">Firebase</span>
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInLeft">
+                                             <img src="images/HTML5CSS3Logos.svg" class="imgs" alt="" />
+                                         </div>
+                                     </div>
+                                     <hr />
+                                     <div class="row">
+                                         <div class="col-md-1 mb-2 animate-box" data-animate-effect="fadeInRight"></div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInRight">
+                                             <img
+                                                     src="images/python-seeklogo.com.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInRight">
+                                             <img
+                                                     src="images/django-logo-negative.png"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInRight">
+                                             <img
+                                                     src="images/postgresql-seeklogo.com.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                             <span class="">Postgresql</span>
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInRight">
+                                             <img
+                                                     src="images/git-seeklogo.com.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                         </div>
+                                         <div class="col-md-2 mb-2 animate-box" data-animate-effect="fadeInRight">
+                                             <img
+                                                     src="images/flask-seeklogo.com.svg"
+                                                     class="imgs"
+                                                     alt=""
+                                             />
+                                         </div>
+                                     </div>
+                                     <hr />
                                  </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Python3</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                    <span>90%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">JavaScript</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                    <span>85%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Django</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-4" role="progressbar" aria-valuenow="20"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                    <span>80%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Angular</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                    <span>85%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Flask</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                                    <span>75%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">GitHub</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                    <span>90%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Databases</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="20"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                    <span>90%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
+                             </div>
+                             </div>
                   </div>
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">HTML, CSS and Boostrap</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:95%">-->
+<!--                                    <span>95%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">Python3</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">-->
+<!--                                    <span>90%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">JavaScript</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="30"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">-->
+<!--                                    <span>85%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">Django</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-4" role="progressbar" aria-valuenow="20"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">-->
+<!--                                    <span>80%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">Angular</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">-->
+<!--                                    <span>85%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">Flask</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:75%">-->
+<!--                                    <span>75%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">GitHub</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">-->
+<!--                                    <span>90%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">-->
+<!--                           <div class="progress-wrap">-->
+<!--                              <h3 style="font-weight: 500;">Databases</h3>-->
+<!--                              <div class="progress">-->
+<!--                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="20"-->
+<!--                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">-->
+<!--                                    <span>90%</span>-->
+<!--                                 </div>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                     </div>-->
+<!--                  </div>-->
                </section>
                <!--------------Work Experience----------->
                <section class="colorlib-experience" data-section="experience">
