--- a/index.html
+++ b/index.html
@@ -382,17 +382,22 @@
                   </div>
                </section>
               
-               <section class="colorlib-contact" data-section="contact">
+               <section class="colorlib-co ntact" data-section="contact">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <h2>Contact Me</h2>
                               <hr>
-                              <p>Email: ianosang18@gmail.com</p>
+                              <p>Email: :<a href="ianosang18@gmail.com">ianosang18@gmail.com</a> </p>
                               <p>Phone: 0790020740</p>
-                              <p>Twitter: @ianosang</p>
+                              <p>Twitter:
+                                 <a href="https://twitter.com/iano_sang"> Iano Sang</a>
+                              </p>
                               <p>Facebook: Ian Sang</p>
+                              <p>GitHub:<a href="https://github.com/IanoSang">IanoSang</a>
+
+                              </p>
                            </div>
                         </div>
                      </div>
